# agent-memory

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_retrieval.py  bench_storage.py  compare_go_python.py
benchmarks/k6/: README.md  grpc-load.js  http-load.js
benchmarks/locomo_lite/: README.md  README.zh-CN.md  evaluate.py  latest_results.json  sample_dialogues.jsonl  sample_questions.jsonl
deploy/: Dockerfile.go-server  Dockerfile.python-ai  docker-compose.yml
docs/: README.md  architecture.md  benchmark-results.md  mcp-integration.md  project-delivery-and-tutorial.md  release-and-pypi.md
docs/plans/: 2026-03-24-agent-memory-expansion-review.md  2026-03-24-agent-memory-mvp.md
docs/teaching/: 01-project-overview.md  02-architecture-deep-dive.md  03-algorithm-guide.md  04-go-server-guide.md  05-python-sdk-guide.md  06-protobuf-grpc-guide.md  07-database-schema-guide.md  08-deployment-guide.md  09-api-reference.md  10-testing-quality-guide.md  11-performance-benchmarking.md  12-interview-guide.md
docs/zh-CN/: README.md  architecture.md  benchmark-results.md  mcp-integration.md  project-delivery-and-tutorial.md  release-and-pypi.md
examples/: basic_usage.py  benchmark_runner.py  chatbot_with_memory.py  demo_cross_session.py  interactive_chat.py  mcp_server.py
go-server/: Makefile  go.mod  go.sum
src/agent_memory/: __init__.py  cli.py  (+3 more)
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_client.py  test_conflict.py  test_extraction.py  test_forgetting.py  test_governance.py  test_interfaces.py  test_llm_clients.py  test_mcp_server.py  test_remote_backend.py  test_router.py  test_sqlite_backend.py
(+73 files in other folders)
