[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-engine"
version = "0.2.1"
description = "Zero-config, traceable, MCP-native long-term memory for agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "memory", "llm", "mcp", "sqlite", "rag"]
authors = [
  { name = "xjf" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "sentence-transformers>=3.0.0",
  "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
]
mcp = [
  "fastmcp>=2.0.0",
]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
remote = [
  "grpcio>=1.70.0",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[project.urls]
Homepage = "https://github.com/bakebakebakebake/agent-memory"
Repository = "https://github.com/bakebakebakebake/agent-memory"
Issues = "https://github.com/bakebakebakebake/agent-memory/issues"
Documentation = "https://github.com/bakebakebakebake/agent-memory/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
